test/error/24.c
int main(void){
    static auto int a;
    
}